--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ build = "build.rs"
 x11 = "2.18.2"
 libc = "0.2.69"
 servo-fontconfig = "0.5.0"
+clipboard = "0.5.0"
 
 [build-dependencies]
 bindgen = "0.53.2"
