--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ x11 = "2.18.2"
 libc = "0.2.69"
 servo-fontconfig = "0.5.0"
 clipboard = "0.5.0"
+regex = "1.3.7"
 
 [build-dependencies]
 bindgen = "0.53.2"
