--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ libc = "0.2.69"
 servo-fontconfig = "0.5.0"
 clipboard = "0.5.0"
 regex = "1.3.7"
+pledge = "0.4.0"
 
 [build-dependencies]
 bindgen = "0.53.2"
