--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dmenu-rs"
-version = "5.0.0"
+version = "5.1.0"
 authors = ["Shizcow <pohl.devin@gmail.com>"]
 edition = "2018"
 links = "X11"
@@ -18,6 +18,8 @@ servo-fontconfig = "0.5.0"
 clipboard = "0.5.0"
 regex = "1.3.7"
 pledge = "0.4.0"
+clap = "2.33.1"
+lazy_static = "1.4.0"
 
 [build-dependencies]
 bindgen = "0.53.2"
