--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ servo-fontconfig = "0.5.0"
 clipboard = "0.5.0"
 regex = "1.3.7"
 pledge = "0.4.0"
-clap = "2.33.1"
+clap = { version = "2.33.1", features = ["yaml"]}
+yaml-rust = "^0.3" # clap uses yaml-rust too, so Cargo will figure out the proper version
 lazy_static = "1.4.0"
 
 [build-dependencies]
