--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dmenu-rs"
-version = "5.1.0"
+version = "5.0.1"
 authors = ["Shizcow <pohl.devin@gmail.com>"]
 edition = "2018"
 links = "X11"
@@ -21,10 +21,15 @@ pledge = "0.4.0"
 clap = { version = "2.33.1", features = ["yaml"]}
 yaml-rust = "^0.3" # clap uses yaml-rust too, so Cargo will figure out the proper version
 lazy_static = "1.4.0"
+overrider = "0.5.1"
 
 [build-dependencies]
 bindgen = "0.53.2"
 walkdir = "2"
+proc_use = "0.1.1"
+overrider_build = "0.5.1"
+
 
 [features]
 Xinerama = []
+default = ["Xinerama"]
