--- a/src/config/Cargo.toml
+++ b/src/config/Cargo.toml
@@ -13,8 +13,10 @@ name = "list-plugins"
 path = "src/list_plugins.rs"
 
 [dependencies]
+glob = "0.3.0"
 itertools = "0.9.0"
 man_dmenu = { path = "../man" }
+prettytable-rs = "0.8.0"
 yaml-rust = "^0.3"
 
 [build-dependencies]
