--- a/src/dmenu/cli_base.yml
+++ b/src/dmenu/cli_base.yml
@@ -66,31 +66,28 @@ args:
       takes_value: true
       value_name:  ID
   - render_overrun:
-      help: Draw behavior of input box. If set to "true" or "1" will draw input
+      help: Draw behavior of input box. If specified will draw input
         over the top of items when input exceeds the width of input box
       long: render_overrun
-      takes_value: true
-      value_name:  OVERRUN
   - render_flex:
-      help: Draw behavior of input box. If set to "true" or "1" will expand input
+      help: Draw behavior of input box. If specified will expand input
         box when input exceeds the width of input box, gracefully moving items
         out of the way
       long: render_flex
-      takes_value: true
-      value_name:  FLEX
   - render_rightalign:
-      help: Draw behavior of menu items. If set to "true" or "1" will right align
+      help: Draw behavior of menu items. If specified will right align
       long: render_rightalign
-      takes_value: true
-      value_name:  RIGHTALIGN
   - render_default_width:
       help: |
           Default size of input box. Options are:
             min          - input box remains as small as possible
-            items        - same size as the largest menu item
+            items        - same size as the largest menu item (default)
             max          - only one menu item at a time is displayed, right aligned
             custom=WIDTH - fixed width, percentage of total menu width
                            ranges from 0 (min) to 100 (max)
       long: render_default_width
       takes_value: true
       value_name:  DEFAULT_WIDTH
+  - nostdin:
+      help: Do not read from stdin. Probably not useful unless compiled with plugins
+      long: nostdin
