modified makefile for new build scheme

--- a/src/plugins/calc/plugin.yml
+++ b/src/plugins/calc/plugin.yml
@@ -1,4 +1,4 @@
-about: Provides a -= flag to enter calc-mode
+about: Provides a -= flag to enter calc-mode. Uses rink-rs syntax
 entry: main.rs
 cargo_dependencies: deps.toml
 
