--- a/src/dmenu/cli_base.yml
+++ b/src/dmenu/cli_base.yml
@@ -44,6 +44,7 @@ args:
           If a glyph is not found in any fonts, it will\
           render as the no-character box."
       long:  font
+      aliases: fn
       takes_value: true
       value_name:  FONT
       multiple: true
