--- a/src/dmenu/cli_base.yml
+++ b/src/dmenu/cli_base.yml
@@ -42,9 +42,9 @@ args:
           If a glyph is not found in any of the supplied fonts, it will be provided\
           by the default font (:mono). \n\
           If a glyph is not found in any fonts, it will\
-          render as the no-character box."
+          render as the no-character box.\n"
       long:  font
-      aliases: fn
+      visible_aliases: fn
       takes_value: true
       value_name:  FONT
       multiple: true
