--- a/src/plugins/spellcheck/deps.toml
+++ b/src/plugins/spellcheck/deps.toml
@@ -1,2 +1,1 @@
-# Why do people push changes to a crate and not put it on crates.io after 4 years?
-ispell = {git = "https://github.com/lise-henry/rust-ispell"}
+ispell = "0.3.1"
