--- a/src/config/Cargo.toml
+++ b/src/config/Cargo.toml
@@ -17,6 +17,7 @@ glob = "0.3.0"
 itertools = "0.9.0"
 man_dmenu = { path = "../man" }
 prettytable-rs = "0.8.0"
+termcolor = "1.1"
 yaml-rust = "^0.3"
 
 [build-dependencies]
