--- a/src/dmenu/cli_base.yml
+++ b/src/dmenu/cli_base.yml
@@ -74,6 +74,14 @@ args:
       long:  window
       takes_value: true
       value_name:  ID
+  - render_minheight:
+      help: Minimum menu height
+      long_help: Minimum menu draw height. Normally, the menu height is decided by the font size,
+        however this option overrides that. Useful for getting things aligned with elements always
+        on screen, such as i3 statusbar.
+      long: render_minheight
+      takes_value: true
+      value_name:  PIXELS
   - render_overrun:
       help: Draw behavior of input box. If specified will draw input
         over the top of items when input exceeds the width of input box
