Updated plugin descriptions

--- a/src/plugins/fuzzy/plugin.yml
+++ b/src/plugins/fuzzy/plugin.yml
@@ -1,4 +1,4 @@
-about: Fuzzy string matching for searches, enabled by default
+about: Fuzzy string matching for searches, pass --nofuzz to disable
 entry: main.rs
 cargo_dependencies: deps.toml
 
