--- a/src/plugins/spellcheck/plugin.yml
+++ b/src/plugins/spellcheck/plugin.yml
@@ -1,4 +1,4 @@
-about: Single word spellcheck
+about: Single word spellcheck, pass --spellcheck to enable
 entry: main.rs
 cargo_dependencies: deps.toml
 build: "sh build.sh"
