--- a/src/plugins/calc/plugin.yml
+++ b/src/plugins/calc/plugin.yml
@@ -1,4 +1,6 @@
-about: Provides a -= flag to enter calc-mode. Uses rink-rs syntax
+about: |
+    Calculator -- unit aware calculation for physics and engineering
+    Pass --calc to enable. Uses rink-rs syntax
 entry: main.rs
 cargo_dependencies: deps.toml
 build: "sh build.sh"
