--- a/src/plugins/spellcheck/plugin.yml
+++ b/src/plugins/spellcheck/plugin.yml
@@ -1,4 +1,6 @@
-about: Single word spellcheck, pass --spellcheck to enable
+about: |
+    Single word spellcheck. Backed by the GNU aspell library.
+    Pass --spellcheck to enable
 entry: main.rs
 cargo_dependencies: deps.toml
 build: "sh build.sh"
