--- a/src/plugins/lookup/plugin.yml
+++ b/src/plugins/lookup/plugin.yml
@@ -18,9 +18,16 @@ args:
   - engine: 
       help: Engine to use.
       long_help: >
-        Engine to look up into. Possible values: ["github", "rust",
-        "archwiki", "ddg", "english"]. More engines can be added at
+        Engine to look up into. Run `dmenu --lookup --list-engines`
+        to show available engines. More engines can be added at
         src/plugins/lookup/engines.rs during build time. 
       long: engine
       takes_value: true
       requires: lookup
+  - listEngines: # overrider doesn't like underscores
+      help: List available engines.
+      long_help: >
+        List available engines for lookup. Prints a newline-seperated list to stdout.
+      long: list-engines
+      requires: lookup
+      conflicts_with: engine
