--- a/src/config/Cargo.toml
+++ b/src/config/Cargo.toml
@@ -14,8 +14,8 @@ path = "src/list_plugins.rs"
 
 [dependencies]
 glob = "0.3.0"
-itertools = "0.9.0"
+itertools = "0.10.5"
 man_dmenu = { path = "../man" }
-prettytable-rs = "0.8.0"
+prettytable-rs = "0.10.0"
 termcolor = "1.1"
-yaml-rust = "^0.3"
+yaml-rust = "0.4.5"
